--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -368,20 +368,20 @@ Following the Unicode Consortium's specifications for the Unicode Collation Algo
 different levels of strength used in comparisons.
 
 [horizontal]
-PRIMARY:: Typically, this is used to denote differences between base characters (for example, "a" < "b").
+primary:: Typically, this is used to denote differences between base characters (for example, "a" < "b").
 It is the strongest difference. For example, dictionaries are divided into different sections by base character.
-SECONDARY:: Accents in the characters are considered secondary differences (for example, "as" < "às" < "at").
+secondary:: Accents in the characters are considered secondary differences (for example, "as" < "às" < "at").
 Other differences between letters can also be considered secondary differences, depending on the language.
 A secondary difference is ignored when there is a primary difference anywhere in the strings.
-TERTIARY:: Upper and lower case differences in characters are distinguished at tertiary strength
+tertiary:: Upper and lower case differences in characters are distinguished at tertiary strength
 (for example, "ao" < "Ao" < "aò"). In addition, a variant of a letter differs from the base form on the
 tertiary strength (such as "A" and "Ⓐ"). Another example is the difference between large and small Kana.
 A tertiary difference is ignored when there is a primary or secondary difference anywhere in the strings.
-QUATERNARY:: When punctuation is ignored (see Ignoring Punctuations in the user guide) at PRIMARY to TERTIARY strength,
+quaternary:: When punctuation is ignored (see Ignoring Punctuations in the user guide) at PRIMARY to TERTIARY strength,
 an additional strength level can be used to distinguish words with and without punctuation
 (for example, "ab" < "a-b" < "aB"). This difference is ignored when there is a PRIMARY, SECONDARY or TERTIARY
 difference. The QUATERNARY strength should only be used if ignoring punctuation is required.
-IDENTICAL:: When all other strengths are equal, the IDENTICAL strength is used as a tiebreaker.
+identical:: When all other strengths are equal, the IDENTICAL strength is used as a tiebreaker.
 The Unicode code point values of the NFD form of each string are compared, just in case there is no difference.
 For example, Hebrew cantellation marks are only distinguished at this strength.
 This strength should be used sparingly, as only code point value differences between two strings is an extremely
