--- a/README.adoc
+++ b/README.adoc
@@ -1,7 +1,7 @@
 = ICU analysis for Elasticsearch
 
 image:https://api.travis-ci.org/jprante/elasticsearch-analysis-icu.svg[title="Build status", link="https://travis-ci.org/jprante/elasticsearch-analysis-icu/"]
-image:https://maven-badges.herokuapp.com/maven-central/org.jprante/elasticsearch-analysis-icu/badge.svg[title="Maven Central", link="http://search.maven.org/#search%7Cga%7C1%7Cxbib%20elasticsearch-analysis-icu"]
+image:https://maven-badges.herokuapp.com/maven-central/org.xbib/elasticsearch-analysis-icu/badge.svg[title="Maven Central", link="http://search.maven.org/#search%7Cga%7C1%7Cxbib%20elasticsearch-analysis-icu"]
 image:https://img.shields.io/badge/License-Apache%202.0-blue.svg[title="Apache License 2.0", link="https://opensource.org/licenses/Apache-2.0"]
 image:https://img.shields.io/twitter/url/https/twitter.com/xbib.svg?style=social&label=Follow%20%40xbib[title="Twitter", link="https://twitter.com/xbib"]
 
@@ -65,4 +65,4 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 
-image:https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif[title="PayPal", link="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=GVHFQYZ9WZ8HG"]
+image:https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif[title="Donate via PayPal to Jörg Prante", link="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=GVHFQYZ9WZ8HG"]
